<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">module_bourse</string>
    <string name="main_home">首页</string>
    <string name="main_market">行情</string>
    <string name="main_trade">交易</string>
    <string name="main_mine">我的</string>
    <string name="main_property">资产</string>
    <string name="search_hint">搜索 币种</string>
    <string name="name">名称</string>
    <string name="last_prices">最新价</string>
    <string name="last_prices_cny_usd">最新价(%1$s)</string>
    <string name="rise_fall">涨跌幅(24h)</string>
    <string name="rise_fall_list">涨幅榜</string>
    <string name="transaction_list">成交额榜</string>
    <string name="new_coin_list">新币榜</string>
    <string name="drawer_recharge">充币</string>
    <string name="drawer_draw_coin">提币</string>
    <string name="drawer_transform">划转</string>
    <string name="invite_friends">邀请好友</string>
    <string name="set">设置</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="about">关于我们</string>
    <string name="safety_center">安全中心</string>
    <string name="bulish">看多</string>
    <string name="Bearish">看空</string>
    <string name="search_market_hint">搜索感兴趣的币种</string>
    <string name="paris_coin">法币</string>
    <string name="coin_coin">币币</string>
    <string name="buy_in">买入</string>
    <string name="sell_out">卖出</string>
    <string name="limit_price_buy">限价买入</string>
    <string name="login_register">登录/注册</string>
    <string name="login_now">立即登录</string>
    <string name="revoke_all">全部撤单</string>
    <string name="buy">买</string>
    <string name="revoke">撤单</string>
    <string name="delegation_price">委托价</string>
    <string name="trade_amounts">成交量</string>
    <string name="trade_amounts_24">成交量(24h)</string>
    <string name="delegation_amounts">委托量</string>
    <string name="transform_money">资金划转</string>
    <string name="my_pend_order">我的挂单</string>
    <string name="history_delegation">历史委托</string>
    <string name="bill">账单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="coin_coin_account">币币账户</string>
    <string name="paris_coin_account">法币账户</string>
    <string name="propterty_detail">资产明细</string>
    <string name="hide_few_coin_kind">隐藏小额币种</string>
    <string name="one_again_exit">再按一次退出</string>
    <string name="operation">操作</string>
    <string name="available">可用</string>
    <string name="freeze">冻结</string>
    <string name="converter_coin_cny">折合CNY</string>
    <string name="converter_coin_usd">折合USD</string>
    <string name="total_account_assets">总账户资产折合（BTC）</string>
    <string name="account_total_money_rate">钱包总资产折合（BTC）</string>
    <string name="coin_total_money_rate">币币总资产折合（BTC）</string>
    <string name="paris_total_money_rate">法币总资产折合（BTC）</string>
    <string name="choose_coin">选择币种</string>
    <string name="search">搜索</string>
    <string name="trade_rise_fall_distribution">交易对涨跌分布</string>
    <string name="coin_kind">币种</string>
    <string name="num_bracket">数量(%1$s)</string>
    <string name="price_bracket">价格(%1$s)</string>
    <string name="sell">卖</string>
    <string name="time">时间</string>
    <string name="orientation">方向</string>
    <string name="crowd_funding_price">众筹价格</string>
    <string name="white_book">白皮书</string>
    <string name="official_website">官网</string>
    <string name="block_chain_query">区块查询</string>
    <string name="introduce">简介</string>
    <string name="trade_amount">成交量 %1$s</string>
    <string name="filter">筛选</string>
    <string name="reset">重置</string>
    <string name="to">至</string>
    <string name="financial_records">财务记录</string>
    <string name="amount">数量</string>
    <string name="state">状态</string>
    <string name="cancel">取消</string>
    <string name="system">系统</string>
    <string name="turn_into">转入</string>
    <string name="roll_out">转出</string>
    <string name="add_coin_address">添加%1$s地址</string>
    <string name="add_address">添加地址</string>
    <string name="note">备注</string>
    <string name="tag_explain">标签（填写错误可能导致资产损失，请注意）</string>
    <string name="input_or_copy_tag">输入或长按粘贴标签</string>
    <string name="address_note">选填</string>
    <string name="now_withdraw_num">当前可提 %1$s %2$s</string>
    <string name="withdraw_explain_1">支持金额：最低%1$s %2$s</string>
    <string name="withdraw_explain_2">提现手续费：%1$s %2$s，详见 </string>
    <string name="max_can_transfer_num">最多可转 %1$s %2$s</string>
    <string name="address_note_hint">备注内容</string>
    <string name="coin_address">%1$s地址</string>
    <string name="transfer_coin">资金划转</string>
    <string name="bring_coin_records">提币记录</string>
    <string name="recharge_coin_records">充币记录</string>
    <string name="transfer_coin_records">资金划转记录</string>
    <string name="please_select_recharge_coin">请选择充值币种</string>
    <string name="please_input_withdraw_num">请输入提币数量</string>
    <string name="please_input_transfer_num">请输入划转数量</string>
    <string name="recharge_address">充值地址</string>
    <string name="address">地址</string>
    <string name="warning">注意事项:</string>
    <string name="bring_address">提币地址</string>
    <string name="input_or_copy_address">输入或长按粘贴地址</string>
    <string name="bring_num">提币数量</string>
    <string name="total">全部</string>
    <string name="fee">手续费</string>
    <string name="fee_detail">费率详情</string>
    <string name="from">从</string>
    <string name="to_">到</string>
    <string name="coin_type">币种</string>
    <string name="transfer_num">划转数量</string>
    <string name="sure_transfer">确定划转</string>
    <string name="trade_id">区块链交易ID</string>
    <string name="trade">交易</string>
    <string name="search_tip">请输入搜索内容</string>
    <string name="add_my_choose_success">添加自选成功</string>
    <string name="deep">深度</string>
    <string name="deal_ok">成交</string>
    <string name="sell_out_coin">卖出%1$s</string>
    <string name="buy_in_coin">买入%1$s</string>
    <string name="valuation">估值 %1$s</string>
    <string name="amount_coin">数量(%1$s)</string>
    <string name="money_coin">金额(%1$s)</string>
    <string name="see_all">查看全部</string>
    <string name="cancel_order_success">撤单成功</string>
    <string name="cancel_all_order_success">全部撤单成功</string>
    <string name="temporary_no_order">暂无限价单</string>
    <string name="dialog_tip_cancel_single_order">是否撤销此委托单?</string>
    <string name="dialog_tip_cancel_all_order">是否撤销全部委托单?</string>
    <string name="limit_price_sell">限价卖出</string>
    <string name="market_fast_buy">市场快速买入</string>
    <string name="market_fast_sell">市场快速卖出</string>
    <string name="entrust_plan">计划委托</string>
    <string name="entrust_folow">跟踪委托</string>
    <string name="entrust_ice">冰山委托</string>
    <string name="entrust_time">时间加权委托</string>
    <string name="limit_price_order">限价单</string>
    <string name="market_price_order">市价单</string>
    <string name="market_order_tip">以当前最优价格交易</string>
    <string name="input_limit_price">请输入价格</string>
    <string name="min_total">总价最低 %1$s</string>
    <string name="limit_order_buy_in">限价单买入</string>
    <string name="create_order_price">价格&#160;&#160;&#160;&#160;&#160;&#160;%1$s %2$s</string>
    <string name="create_order_amount">数量&#160;&#160;&#160;&#160;&#160;&#160;%1$s %2$s</string>
    <string name="create_order_money">金额&#160;&#160;&#160;&#160;&#160;&#160;%1$s %2$s</string>
    <string name="no_more_remind">下次不再提醒</string>
    <string name="creat_order_success">创建订单成功</string>
    <string name="zero">0.00</string>
    <string name="input_amount">请输入数量</string>
    <string name="input_money">请输入金额</string>
    <string name="more">更多</string>
    <string name="one_min">1分钟</string>
    <string name="five_min">5分钟</string>
    <string name="thirty_min">30分钟</string>
    <string name="one_week">1周</string>
    <string name="assets_percent">持仓分布</string>
    <string name="high_24h">最高额(24h)</string>
    <string name="low_24h">最低额(24h)</string>
    <string name="main_chart">主图</string>
    <string name="second_chart">副图</string>
    <string name="ma">MA</string>
    <string name="boll">BOLL</string>
    <string name="macd">MACD</string>
    <string name="kdj">KDJ</string>
    <string name="rsi">RSI</string>
    <string name="wr">WR</string>
    <string name="trade_price">24H成交额(%1$s)</string>
    <string name="delete_my_choose_success">已取消自选</string>
    <string name="trade_total">成交总额</string>
    <string name="trade_average_price">成交均价</string>
    <string name="revoked">已撤单</string>
    <string name="traded">已成交</string>
    <string name="traded_amount">已成交量</string>
    <string name="market_name">/%1$s</string>
    <string name="please_login">请先登录</string>
    <string name="can_not_forecase_too">不能重复预测</string>
    <string name="out_account">出账账户</string>
    <string name="in_account">入账账户</string>
    <string name="transform_detail">资金划转详情</string>
    <string name="recharge_detail">充币详情</string>
    <string name="draw_detail">提币详情</string>
    <string name="sure_ing">确认中</string>
    <string name="done">已完成</string>
    <string name="checking">审核中</string>
    <string name="canceled_">已撤销</string>
    <string name="deal_ing">处理中</string>
    <string name="please_input_price">请输入价格</string>
    <string name="please_input_price_more_zero">价格不能为零</string>
    <string name="available_money">可用 %1$s</string>
    <string name="no_set_trade_pwd">未设置交易密码</string>
    <string name="go_set">去设置</string>
    <string name="min_amount">最小数量 %1$s</string>
    <string name="min_money">最小金额 %1$s</string>
    <string name="event_gift">系统</string>
    <string name="want_to_buy">我要购买</string>
    <string name="want_to_sell">我要出售</string>
    <string name="paris_coin_trade_amount">成交 %1$s</string>
    <string name="paris_coin_trade_rate">成交率 %1$s</string>
    <string name="limit_money">限额</string>
    <string name="unit_price">单价</string>
    <string name="purchase">购买</string>
    <string name="sale">出售</string>
    <string name="go_buy">购买</string>
    <string name="go_sell">出售</string>
    <string name="paris_buy">购买%1$s</string>
    <string name="paris_sell">出售%1$s</string>
    <string name="can_buy_num">可买数量%1$s</string>
    <string name="can_sell_num">可卖数量%1$s</string>
    <string name="paris_account_can_use">法币账户可用%1$s</string>
    <string name="please_input_money">请输入金额%1$s</string>
    <string name="assets_pwd">资金密码</string>
    <string name="please_input_assets_pwd">请输入资金密码</string>
    <string name="register_time">注册时间</string>
    <string name="auth_level">认证等级</string>
    <string name="release_coin_time">放币时效</string>
    <string name="cny">(CNY)</string>
    <string name="price">价格</string>
    <string name="money">金额</string>
    <string name="down_order">下订单</string>
    <string name="go_to_outline_pay">去线下付款</string>
    <string name="wait_other_side_loan">等待对方放款</string>
    <string name="wait_other_side_pay">等待对方支付</string>
    <string name="wait_other_side_fukuan">等待对方付款</string>
    <string name="other_side_payed">对方已支付</string>
    <string name="wait_other_side_release_coin">等待对方放币</string>
    <string name="click_already_pay">点击已付款</string>
    <string name="wait_release_coin">待放币</string>
    <string name="go_to_release_coin">去放币</string>
    <string name="cancel_order_explain">3分钟之内可自主</string>
    <string name="pay_info">付款信息</string>
    <string name="cancel_order">取消订单</string>
    <string name="clear">清除</string>
    <string name="complete">完成</string>
    <string name="min_trade_money">最小交易金额</string>
    <string name="please_input_min_money">请输入最小目标金额</string>
    <string name="payment_method">收款方式</string>
    <string name="bank_card">银行卡</string>
    <string name="wechat">微信</string>
    <string name="zfb">支付宝</string>
    <string name="please_select_payment_method">请选择付款方式</string>
    <string name="my_order">我的订单</string>
    <string name="set_pay_receive">收付款设置</string>
    <string name="blacklist_attention">黑名单/关注</string>
    <string name="delegation_order">委托单</string>
</resources>