<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_shape"
        android:orientation="vertical">

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_all"
            style="@style/PopWindowTextStyle"
            android:text="@string/all" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_draw_coin"
            style="@style/PopWindowTextStyle"
            android:text="@string/drawer_draw_coin"
            android:textColor="@color/color_common_text99" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_recharge"
            style="@style/PopWindowTextStyle"
            android:text="@string/drawer_recharge"
            android:textColor="@color/color_common_text99" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_turn_into"
            style="@style/PopWindowTextStyle"
            android:text="@string/turn_into"
            android:textColor="@color/color_common_text99" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_roll_out"
            style="@style/PopWindowTextStyle"
            android:text="@string/roll_out"
            android:textColor="@color/color_common_text99" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_system"
            style="@style/PopWindowTextStyle"
            android:text="@string/system"
            android:textColor="@color/color_common_text99" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_dialog_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/cancel"
            android:textColor="@color/color_common_text99"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>