<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/min_trade_money"
            android:textColor="@color/cl_333333"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_paris_trade_min_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_edit"
            android:hint="@string/please_input_min_money"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/payment_method"
            android:textColor="@color/cl_333333"
            android:textSize="17sp" />

        <com.fmtch.module_bourse.widget.PayMethodView
            android:id="@+id/pay_method_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cl_f7f7f7"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="@color/cl_666666"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/theme"
            android:gravity="center"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>