<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle">

        <TextView
            android:id="@+id/tv_title"
            style="@style/ToolbarCenterTitle" />

    </android.support.v7.widget.Toolbar>

    <View style="@style/Divider" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/address"
        android:textColor="@color/color_common_text33"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_or_copy_address"
            android:padding="15dp"
            android:textColor="@color/color_common_text33"
            android:textColorHint="@color/color_common_text99"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_scan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_scan_blue" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/note"
        android:textColor="@color/color_common_text33"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/address_note_hint"
        android:padding="15dp"
        android:textColor="@color/color_common_text33"
        android:textColorHint="@color/color_common_text99"
        android:textSize="15sp" />

    <View
        style="@style/Divider"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <LinearLayout
        android:id="@+id/ll_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/tag_explain"
            android:textColor="@color/color_common_text33"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_or_copy_tag"
            android:padding="15dp"
            android:textColor="@color/color_common_text33"
            android:textColorHint="@color/color_common_text99"
            android:textSize="15sp" />

        <View
            style="@style/Divider"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_sure"
        style="@style/mine_button_style"
        android:layout_marginBottom="60dp"
        android:text="@string/sure" />

</LinearLayout>